@@ -4,6 +4,7 @@
 
 2011-08-05  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
+	* articles/applets_arturogf: Update documentation links
 	* about.src applications.src developer.src downloads.src
 	feedback.src index.src: Fix typos
 
